nav href changes

--- a/About.html
+++ b/About.html
@@ -23,12 +23,12 @@
                 </div>
             </div>
             <nav>
-                <a href="https://epembelajaran.umt.edu.my/oceania/">HOME</a>
-                <a href="About">ABOUT</a>
-                <a href="Brands">BRANDS</a>
-                <a href="Event">EVENTS</a>
-                <a href="Contact.html">CONTACT</a>
-                <a href="Support">SUPPORT</a>
+                <a href="index.html">HOME</a>
+                <a href="About.html">ABOUT</a>
+                <a href="brand.html">BRANDS</a>
+                <a href="event.html">EVENTS</a>
+                <a href="contact.html">CONTACT</a>
+                <a href="support.html">SUPPORT</a>
             </nav>
         </div>
     </header>
