--- a/ModelPorsche.html
+++ b/ModelPorsche.html
@@ -20,12 +20,12 @@
                 </div>
             </div>
             <nav>
-                <a href="main.html">HOME</a>
-                <a href="About">ABOUT</a>
-                <a href="brand.html">BRANDS</a>
-                <a href="event.html">EVENTS</a>
-                <a href="contact.html">CONTACT</a>
-                <a href="support.html">SUPPORT</a>
+                <a href="index.html">HOME</a>
+                    <a href="About.html">ABOUT</a>
+                    <a href="brand.html">BRANDS</a>
+                    <a href="event.html">EVENTS</a>
+                    <a href="contact.html">CONTACT</a>
+                    <a href="support.html">SUPPORT</a>
             </nav>
         </div>
     </header>
