--- a/event.html
+++ b/event.html
@@ -23,8 +23,8 @@
                 <!-- Add the following image tag -->
                 <img src="CircuitBackground.jpg" alt="Header Image" class="HeaderImage">
                 <nav>
-                    <a href="main.html">HOME</a>
-                    <a href="About">ABOUT</a>
+                    <a href="index.html">HOME</a>
+                    <a href="About.html">ABOUT</a>
                     <a href="brand.html">BRANDS</a>
                     <a href="event.html">EVENTS</a>
                     <a href="contact.html">CONTACT</a>
