--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- Add the following image tag -->
                 <img src="CircuitBackground.jpg" alt="Header Image" class="HeaderImage">
                 <nav>
-                    <a href="main.html">HOME</a>
+                    <a href="index.html">HOME</a>
                     <a href="About">ABOUT</a>
                     <a href="brand.html">BRANDS</a>
                     <a href="event.html">EVENTS</a>
