--- a/ModelLambo.html
+++ b/ModelLambo.html
@@ -20,8 +20,8 @@
                 </div>
             </div>
             <nav>
-                <a href="main.html">HOME</a>
-                <a href="About">ABOUT</a>
+                <a href="index.html">HOME</a>
+                <a href="About.html">ABOUT</a>
                 <a href="brand.html">BRANDS</a>
                 <a href="event.html">EVENTS</a>
                 <a href="contact.html">CONTACT</a>
