--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="CircuitBackground.jpg" alt="Header Image" class="HeaderImage">
                 <nav>
                     <a href="index.html">HOME</a>
-                    <a href="About">ABOUT</a>
+                    <a href="About.html">ABOUT</a>
                     <a href="brand.html">BRANDS</a>
                     <a href="event.html">EVENTS</a>
                     <a href="contact.html">CONTACT</a>
