--- a/brand.html
+++ b/brand.html
@@ -66,13 +66,7 @@
             </div>
             <div class="item">
                 <label>Year</label>
-                <select name="year">
-                    <option value="">---</option>
-                    <option value="2010">2010</option>
-                    <option value="2011">2011</option>
-                    <option value="2019">2019</option>
-                    <option value="2020">2020</option>
-                </select>
+                <input name="year" type="text">
             </div>
 
             <div class="item submit">
