--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </header>
 
     <main>
+        <div class="separate">
         <div class="Title">
             <h2><em>Sports Cars</em></h2>
             <h3>Showroom</h3>
@@ -47,9 +48,12 @@
                     providing visitors with information, images, and specifications of various sports car models</p>
             </div>
         </div>
-        <section class="Content">
+        <div class="Content">
 
             <div class="LatestSection">
+                <div class="LatestText">
+                    <h3>Available Brands</h3>
+                </div>
                 <div class="LatestBox">
                     <div class="mySlides fade">
                         <div class="numbertext">1/ 4</div>
@@ -80,9 +84,7 @@
                         <span class="dot"></span>
                     </div>
                 </div>
-                <div class="LatestText">
-                    <h3>Available Brands</h3>
-                </div>
+                
             </div>
             <div class="Brand">
                 <a href="ModelAston.html">
@@ -98,9 +100,12 @@
                 <a href="ModelMerc.html">
                     <img src="Mercedes.png" alt="Mercedes" style="width:100px;height:70px;">
                 </a>
+
+               
             </div>
 
-        </section>
+        </div>
+    </div>
 
     </main>
 
