main change to index

--- a/term.html
+++ b/term.html
@@ -127,7 +127,7 @@
     <script>
         document.getElementById("acceptButton").addEventListener("click", function () {
             // Redirect to your desired page
-            window.location.href = "main.html";
+            window.location.href = "index.html";
         });
     </script>
 
