--- a/brand.html
+++ b/brand.html
@@ -61,7 +61,9 @@
                     <option value="grey">grey</option>
                     <option value="orange">orange</option>
                     <option value="maroon">maroon</option>
-                    <option value="olive">maroon</option>
+                    <option value="olive">olive</option>
+                    <option value="gold">gold</option>
+                    <option value="Yellow">yellow</option>
                 </select>
             </div>
             <div class="item">
