--- a/brand.html
+++ b/brand.html
@@ -55,7 +55,7 @@
             <div class="item">
                 <label>Color</label>
                 <select name="color">
-                    <!-- <option value="">---</option>
+                    <option value="">---</option>
                     <option value="white">white</option>
                     <option value="black">black</option>
                     <option value="grey">grey</option>
@@ -63,7 +63,7 @@
                     <option value="maroon">maroon</option>
                     <option value="olive">olive</option>
                     <option value="gold">gold</option>
-                    <option value="Yellow">yellow</option> -->
+                    <option value="Yellow">yellow</option>
                 </select>
             </div>
             <div class="item">
